# insignia-be

./: .env.example  .gitignore  Chat QWEN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
alembic/: env.py  script.py.mako
app/api/: __init__.py  router.py  task_logs.py  tasks.py
app/core/: __init__.py  config.py  database.py  logging_config.py  scheduler.py  security.py  task_executor.py
app/models/: __init__.py  task.py  task_log.py
app/schemas/: __init__.py  task.py  task_log.py
tests/: test_auth.py  test_main.py  test_retry_logic.py  test_scheduler.py  test_scheduler_fixes.py  test_task_logs.py  test_tasks.py
