[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insignia-be"
version = "0.1.0"
description = "A FastAPI-based task scheduler application with PostgreSQL database integration"
authors = [
    {name = "M Akmal", email = "akmalmuhamad68@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.7.0",
    "python-dotenv>=0.19.0",
    "pydantic-settings>=2.0.0",
    "pytest>=6.2.0",
    "aiohttp>=3.8.0",
    "croniter>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.0",
    "httpx>=0.23.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic
)/
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
extend-select = [
    "I",  # isort
]
extend-ignore = [
    "E501",  # Line too long
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "X", "Y", "Z"]
unfixable = []

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    ".git",
    "alembic",
]
# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10