[metadata]
name = insignia-be
version = 0.1.0
description = A FastAPI-based task scheduler application with PostgreSQL database integration
author = M Akmal
author_email = akmalmuhamad68@gmail.com

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi>=0.68.0
    uvicorn>=0.15.0
    sqlalchemy>=1.4.0
    psycopg2-binary>=2.9.0
    alembic>=1.7.0
    python-dotenv>=0.19.0
    pydantic-settings>=2.0.0
    pytest>=6.2.0
    aiohttp>=3.8.0
    croniter>=1.3.0

[options.extras_require]
test =
    pytest>=6.2.0
    httpx>=0.23.0

[options.packages.find]
include = app*